welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  var vuBiscuit :Boolean = false 
  for (compt <- 1 to 6) {
  avance() 
  if (estSurBiscuit) {
    vuBiscuit = true
  }
    return vuBiscuit
  }
}